--- a/pom.xml
+++ b/pom.xml
@@ -523,6 +523,16 @@
           <version>${jacksonVersion}</version>
         </dependency>
         <dependency>
+          <groupId>com.fasterxml.woodstox</groupId>
+          <artifactId>woodstox-core</artifactId>
+          <version>6.5.1</version>
+        </dependency>
+        <dependency>
+          <groupId>org.codehaus.woodstox</groupId>
+          <artifactId>stax2-api</artifactId>
+          <version>4.2.1</version>
+        </dependency>
+        <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-configuration2</artifactId>
           <version>2.8.0</version>
@@ -571,6 +581,7 @@
           <groupId>org.apache.thrift</groupId>
           <artifactId>libthrift</artifactId>
           <version>0.17.0</version>
+          <scope>runtime</scope>
         </dependency>
         <dependency>
           <groupId>com.google.guava</groupId>
@@ -854,6 +865,7 @@
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
       <version>0.17.0</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>commons-modeler</groupId>
