--- a/pom.xml
+++ b/pom.xml
@@ -580,6 +580,16 @@
           <artifactId>hadoop-shaded-protobuf_3_7</artifactId>
           <version>1.1.1</version>
         </dependency>
+        <dependency>
+          <groupId>org.apache.avro</groupId>
+          <artifactId>avro</artifactId>
+          <version>1.11.3</version>
+        </dependency>
+        <dependency>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+          <version>1.6.0</version>
+        </dependency>
       <!-- System dependencies-->
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -835,6 +845,16 @@
       <groupId>org.apache.hadoop.thirdparty</groupId>
       <artifactId>hadoop-shaded-protobuf_3_7</artifactId>
       <version>1.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.avro</groupId>
+      <artifactId>avro</artifactId>
+      <version>1.11.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.6.0</version>
     </dependency>
 
     <!-- System dependencies-->
