--- a/pom.xml
+++ b/pom.xml
@@ -438,6 +438,7 @@
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.13.1</version>
+          <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>org.mockito</groupId>
@@ -567,6 +568,7 @@
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>32.1.2-jre</version>
+          <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>com.google.guava</groupId>
@@ -722,6 +724,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -863,9 +866,10 @@
       <version>9.7.0-7</version>
     </dependency>
     <dependency>
-     <groupId>com.google.guava</groupId>
-     <artifactId>guava</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
       <version>32.1.2-jre</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -932,6 +936,38 @@
       <artifactId>commons-cli</artifactId>
       <version>1.6.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.4.01</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.xml.soap</groupId>
+      <artifactId>jakarta.xml.soap-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>1.7.36</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging-api</artifactId>
+      <version>1.0.4</version>
+    </dependency>
+
 
     <!-- System dependencies-->
     <dependency>
