Fix Commons-text 1.9: Exculde commons-text in hadoop-common

--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,12 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
       <version>${hadoopVersion}</version>
+      <exclusions>
+         <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-text</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
